1. 去掉对portlet的支持 2. 增加memcache客户端

--- a/pom.xml
+++ b/pom.xml
@@ -22,9 +22,9 @@
             <version>2.5</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.portals</groupId>
-            <artifactId>portlet-api_2.0_spec</artifactId>
-            <version>1.0</version>
+            <groupId>com.whalin</groupId>
+            <artifactId>Memcached-Java-Client</artifactId>
+            <version>3.0.2</version>
         </dependency>
 
         <dependency>
