aspectj-maven-plugin织入aspectj

--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,41 @@
                     <showWarnings>true</showWarnings>
                 </configuration>
             </plugin>
+
+            <!-- refer http://opoo.org/aspectj-compile-time-weaving/ -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>aspectj-maven-plugin</artifactId>
+                <version>1.8</version>
+                <configuration>
+                    <verbose>true</verbose>
+                    <privateScope>true</privateScope>
+                    <showWeaveInfo>true</showWeaveInfo>
+                    <source>${jdk.version}</source>
+                    <target>${jdk.version}</target>
+                    <complianceLevel>${jdk.version}</complianceLevel>
+                    <!-- <encoding>UTF-8</encoding> -->
+                    <verbose>false</verbose>
+                    <outxml>true</outxml>
+                    <aspectLibraries>
+                        <!-- 此处定义外部的aspect包，例如spring的事务aspect包 。这里引用的包必须在依赖中声明 -->
+                        <!--
+                          <aspectLibrary>
+                             <groupId>org.springframework</groupId>
+                             <artifactId>spring-aspects</artifactId>
+                         </aspectLibrary>
+                        -->
+                    </aspectLibraries>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>compile</goal><!-- use this goal to weave all your main classes -->
+                            <!-- <goal>test-compile</goal> -->
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
