--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,11 @@
             <artifactId>aspectjweaver</artifactId>
             <version>1.8.9</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-translate</artifactId>
+            <version>1.31.0</version>
+        </dependency>
 
         <dependency>
             <groupId>junit</groupId>
