--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,11 @@
             <artifactId>google-cloud-translate</artifactId>
             <version>1.31.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
 
         <dependency>
             <groupId>junit</groupId>
